--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <button class="btn" data-value="4">4</button>
                 <button class="btn" data-value="5">5</button>
                 <button class="btn" data-value="6">6</button>
-                <button class="btn" data-value=""></button>
+                <button class="btn" data-value="*">*</button>
                 <button class="btn" data-value="1">1</button>
                 <button class="btn" data-value="2">2</button>
                 <button class="btn" data-value="3">3</button>
