--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <!-- stylesheet is added-->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
+        <!--heading is given-->
         <h2 class="title">We are here for your Calculations🧮</h2>
         <div class="calculator">
+            <!-- input box for taking input input showing evaluated output-->
             <input type="text" id="display" disabled>
             <div class="buttons">
+                <!--differnt button for taking input-->
                 <button class="btn" data-value="7">7</button>
                 <button class="btn" data-value="8">8</button>
                 <button class="btn" data-value="9">9</button>
@@ -33,6 +37,7 @@
             </div>
         </div>
     </div>
+    <!--js file is added at the end-->
     <script src="script.js"></script>
 </body>
 </html>
